##
##  xkaapi
##
##  Created by CL and TG on 04/02/09.
##  Copyright 2009 INRIA. All rights reserved.
##

include ./Makefile.examples.am

AM_CPPFLAGS=@AM_CPPFLAGS@
AM_CFLAGS=@AM_CFLAGS@ $(STD_C99_FLAGS)
AM_CXXFLAGS=@AM_CXXFLAGS@


check_PROGRAMS=

include accumulate.am
include cilk.am
include fibo.am
include find.am
include for_each.am
include hello.am
include nqueens.am
include poisson3D.am
include branchbound.am


check_PROGRAMS+= 

TESTS=  

