
SUBDIRS=

SUBDIRS+=libffi

RECURSIVE_TARGETS = all-recursive
ALT_RECURSIVE_TARGETS = check-recursive \
	install-exec-recursive \
	install-recursive \
	installcheck-recursive installdirs-recursive
ALT2_RECURSIVE_TARGETS = dvi-recursive \
	html-recursive info-recursive install-data-recursive \
	install-dvi-recursive \
	install-html-recursive install-info-recursive \
	install-pdf-recursive install-ps-recursive \
	pdf-recursive \
	ps-recursive uninstall-recursive

$(ALT_RECURSIVE_TARGETS): all-recursive
$(ALT2_RECURSIVE_TARGETS):

